# modular_cartographer

./: .gitignore  .gitlab-ci.yml  .rosinstall  AUTHORS  LICENCE  README.md
cartographer_ros/: CMakeLists.txt  package.xml  rviz_plugin_description.xml
cartographer_ros/cartographer_ros/: assets_writer.cc  map_builder_bridge.cc  map_builder_bridge.h  msg_conversion.h  msg_conversion_test.cc  node.cc  node_main.cc  node_options.h  offline_node.cc  offline_node_main.cc  ros_log_sink.cc  ros_map_writing_points_processor.cc  rosbag_validate_main.cc  sensor_bridge.cc  sensor_bridge.h  submap.h  time_conversion_test.cc  trajectory_options.cc  trajectory_options.h
cartographer_ros/cartographer_ros/cartographer_grpc/: node_grpc_main.cc  offline_node_grpc_main.cc
cartographer_ros/cartographer_ros/dev/: pbstream_trajectories_to_rosbag_main.cc  trajectory_comparison_main.cc
cartographer_ros/cartographer_ros/metrics/: family_factory.cc
cartographer_ros/cartographer_ros/metrics/internal/: counter.h  histogram.cc  histogram.h
cartographer_ros/cartographer_rviz/: drawable_submap.cc  drawable_submap.h  ogre_slice.cc  ogre_slice.h  submaps_display.cc  submaps_display.h
cartographer_ros/include/cartographer_ros/: assets_writer.h  map_builder_bridge.h  msg_conversion.h  node.h  node_constants.h  node_options.h  offline_node.h  playable_bag.h  proto_sstream.h  ros_log_sink.h  ros_map.h  ros_map_writing_points_processor.h  sensor_bridge.h  submap.h  tf_bridge.h  time_conversion.h  trajectory_options.h  urdf_reader.h
cartographer_ros/include/cartographer_ros/metrics/: family_factory.h
cartographer_ros/include/cartographer_ros/metrics/internal/: counter.h  family.h  gauge.h  histogram.h
cartographer_ros/include/cartographer_ros/rviz/: drawable_submap.h  submaps_display.h
cartographer_ros/launch/: demo_launch.py  test_launch.py
cartographer_ros/patches/: 0001-Pass-in-abseil-tar-path-or-libraries-and-includes.patch
cartographer_ros/src/: assets_writer.cc  map_builder_bridge.cc  msg_conversion.cc  node.cc  node_constants.cc  node_main.cc  node_options.cc  occupancy_grid_node_main.cc  offline_node_main.cc  pbstream_map_publisher_main.cc  playable_bag.cc  proto_sstream.cc  ros_log_sink.cc  ros_map.cc  sensor_bridge.cc  submap.cc  tf_bridge.cc  time_conversion.cc  trajectory_options.cc  urdf_reader.cc
cartographer_ros/src/dev/: assets_writer_main.cc  occupancy_grid_node_main.cc  occupancy_grid_to_pbstream.cc  offline_node_main.cc  pbstream_map_publisher_main.cc  pbstream_to_ros_map_main.cc  pbstream_trajectories_to_rosbag_main.cc  rosbag_publisher_main.cc  rosbag_validate_main.cc  sdf_to_pbstream.cc  test_find_constraint.cc  trajectory_comparison_main.cc
cartographer_ros/src/metrics/: family_factory.cc
cartographer_ros/src/metrics/internal/: family.cc  histogram.cc  metrics_test.cc
cartographer_ros/src/rviz/: drawable_submap.cc  ogre_slice.cc  submaps_display.cc
cartographer_ros/src/test/: configuration_files_test.cc  msg_conversion_test.cc  time_conversion_test.cc
cartographer_ros_msgs/: CMakeLists.txt  package.xml
cartographer_ros_msgs/msg/: SystemState.msg
cartographer_ros_msgs/srv/: LoadState.srv  StartLocalisation.srv  StartMapping.srv  WriteState.srv
modular_cartographer/: CMakeLists.txt  package.xml
tag_landmarks/: .gitlab-ci.yml  CMakeLists.txt  package.xml
tag_landmarks/src/: main.cpp
